# rusty-polygon-geohasher

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
benches/: bench.rs
duckdb_extension/: Cargo.toml  Makefile
duckdb_extension/src/: lib.rs  wasm_lib.rs
rusty_polygon_geohasher/: __init__.py
src/: lib.rs
tests/: conftest.py  test_geohash_ops.py  test_geohasher.py
tests/data/: verdun_wkt.txt  whitehorse_wkt.txt
