[package]
name = "rusty-polygon-geohasher"
version = "0.2.3"
edition = "2021"
authors = ["Francois Maillet <francois@locallogic.co>"]
homepage = "https://github.com/nexmoov/rusty-polygon-geohasher"
license = "MIT"
readme = "README.md"
keywords=["polygon", "geohashes", "geospatial"]

[dependencies]
pyo3 = { version = "^0.21.0", features = ["extension-module", "abi3-py310"] }
geo = "^0.29"
geohash = "^0.13.1"
queue = "^0.3.1"
py_geo_interface = "^0.8.0"
geo-types = "^0.7.13"

[lib]
name = "geohash_polygon"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = "0.5.1"
wkt = "0.12.0"

[[bench]]
name = "bench"
harness = false

#[dependencies.pyo3]
#version = "0.21.1"
## "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
#features = ["abi3-py310"]
