[tool.poetry]
name = "rusty-polygon-geohasher"
version = "0.1.3"
description = "A Rust implementation of the polygon to geohash library"
readme = "README.md"
authors = ["Francois Maillet <francois@locallogic.co>"]
license = "MIT"
repository = "https://github.com/mailletf/rusty-polygon-geohasher"
keywords=["polygon", "geohashes", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
maturin = "^1.7.0"
shapely = "^2.0.5"
ruff = "^0.5.5"
polygon-geohasher = "^0.0.1"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry.dependencies]
python = "^3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
