[tool.poetry]
name = "rusty-polygon-geohasher"
version = "0.2.2"
description = "A Rust implementation of the polygon to geohash library"
readme = "README.md"
authors = ["Francois Maillet <francois@locallogic.co>"]
license = "MIT"
repository = "https://github.com/nexmoov/rusty-polygon-geohasher"
keywords=["polygon", "geohashes", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust"
]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
maturin = "^1.7.0"
shapely = "^2.0.5"
ruff = "^0.5.5"
pytest-benchmark = "^4.0.0"
six = "^1.16.0"
polygon-geohasher = "^0.0.1"

pre-commit = "^3.8.0"
[tool.poetry.group.troubleshooting.dependencies]
ipython = "^8.26.0"

pandas = "^2.2.2"
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry.dependencies]
python = "^3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
